--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello world
+<!doctype html>
+<html lang="en" data-critters-container>
+<head>
+  <meta charset="utf-8">
+  <title>Tecwave</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
+<link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
+<body>
+  <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
+<script src="runtime.975ae82c10a141ad.js" type="module"></script><script src="polyfills.4d6b3360930c8885.js" type="module"></script><script src="main.e5688212eaeb648c.js" type="module"></script></body>
+</html>
